# WellRead-Backend

./: .gitignore  Dockerfile  Makefile  README.md  build_docker.sh  conftest.py  make_db.sh  pyproject.toml  pytest.ini
app/: .env  associations.py  auth_utils.py  crud.py  database.py  dependencies.py  google_books.py  google_books_schemas.py  gunicorn_conf.py  logging.conf  logging.py  main.py  models.py  permissions.py  roles.py  schemas.py  testfile.py
app/integration_tests/: test_books_models.py  test_club_tags_models.py  test_clubs_models.py  test_notes_models.py  test_tags_models.py  test_users_models.py  utils.py
app/tests/: test_clubs_models.py  test_notes_models.py  test_tags_models.py  test_teams_models.py  test_users_models.py  utils.py
githooks/: pre-commit
wellread/: app.py  crud.py  database.py  models.py  pydantic_models.py  schemas.py
wellread/models/pydantic/: common.py  pet_example.py  slack.py
wellread/schemas/: club.py  note.py  tag.py  team.py  user.py
wellread/tests/: test_clubs_models.py  test_database.py  test_notes_models.py  test_tags_models.py  test_teams_models.py  test_users_models.py  utils.py
