[tool.poetry]
name = "wellread"
version = "0.1.0"
description = "WellRead backend"
authors = ["pk8189 <pmkelly4444@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.0"
uvicorn = "^0.11.5"
sqlalchemy = "^1.3.17"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
pytest = "^5.4.3"
black = "^19.10b0"
autoflake = "^1.3.1"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
